
presetdir = $(datadir)/gstreamer-0.10/presets
preset_DATA = ffenc_ac3.prs GstFaac.prs GstVorbisEnc.prs \
              ffenc_flv.prs GstLameMP3Enc.prs GstX264Enc.prs \
              ffenc_h263p.prs GstLame.prs GstXvidEnc.prs \
              ffenc_mpeg4.prs GstTheoraEnc.prs
EXTRA_DIST = ffenc_ac3.prs GstFaac.prs GstVorbisEnc.prs \ 
             ffenc_flv.prs GstLameMP3Enc.prs GstX264Enc.prs \ 
             ffenc_h263p.prs GstLame.prs GstXvidEnc.prs \
             ffenc_mpeg4.prs GstTheoraEnc.prs
