SUBDIRS = 

transmageddondir = $(datadir)/transmageddon

transmageddon_PYTHON = \
	transmageddon.py \
	transcoder_engine.py \
	transmageddon.ui \
        transmageddon-dvdtrack-chooser.ui \
        transmageddon-language-chooser.ui \
	codecfinder.py \
	presets.py \
	utils.py \
	about.py \
        which.py \
        gstfraction.py \
        udevdisco.py \
        dvdtrackchooser.py \
        langchooser.py

BUILT_SOURCES=

clean-local:
	rm -rf *.pyc *.pyo
